--- a/index.html
+++ b/index.html
@@ -39,93 +39,113 @@
       font-size: 20px;
     }
 
+    .links a{
+      transition: color 0.2s ease-in-out;
+      color:black;
+    }
+    .links a:hover{
+      color:grey;
+    }
+
     .about-right{
       text-align: center;
     }
+    .navbar {
+      -webkit-box-shadow: 0px 0px 106px -19px rgba(0,0,0,0.75);
+      -moz-box-shadow: 0px 0px 106px -19px rgba(0,0,0,0.75);
+      box-shadow: 0px 0px 106px -19px rgba(0,0,0,0.75);
 
+      /* the rest of your styling */
+    }
     @media screen and (min-width: 1025px) {
       .about-right{
         margin-top: 20%;
         padding-right: 10%;
         padding-left: 10%;
       }
-      .about-left{
-        margin-top:15%;
+      /*.about-right h1{
+        font-size: 4em;
       }
-    }
-  </style>
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark animated fadeInDown">
-    <a class="navbar-brand animated fadeInUp" href="#" style="animation-delay: 1s">Dishant Kaushik</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      .about-right p{
+        font-size: 1.5em;
+        }*/
+        .about-left{
+          margin-top:15%;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark animated fadeInDown">
+      <a class="navbar-brand animated fadeInUp" href="#" style="animation-delay: 1s">Dishant Kaushik</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto" id="menu">
-        <li class="nav-item active">
-          <a class="nav-link" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#education">Education</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#projects">Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#experience">Experience</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#skills">Skills</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#awards">Awards and Achievements</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#extra">Extracurricular</a>
-        </li>
-      </ul>
-      <span class="navbar-text animated fadeInDown" style="animation-delay: 1s">
-        Software Engineering graduate seeking an internship in summer ‘18
-      </span>
-    </div>
-  </nav>
-  <div class="container">
-    <div class="row" style="padding-top: 5%;" id="about">
-      <div class="col-md-3 about-left">
-        <img src="images/profile_photo.jpg" alt="" class="profile rounded-circle">
-        <div class="links">
-          <i class="fas fa-envelope"></i>
-          <i class="fab fa-github"></i>
-          <i class="fab fa-linkedin-in"></i>
-          <i class="fab fa-facebook-f"></i>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto" id="menu">
+          <li class="nav-item active">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#education">Education</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#experience">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#awards">Awards and Achievements</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#extra">Extracurricular</a>
+          </li>
+        </ul>
+        <span class="navbar-text animated fadeInDown" style="animation-delay: 1s">
+          Software Engineering graduate seeking an internship in summer ‘18
+        </span>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="row" style="padding-top: 5%;" id="about">
+        <div class="col-md-3 about-left">
+          <img src="images/profile_photo.jpg" alt="" class="profile rounded-circle animated fadeIn" style="animation-delay: 1s;">
+          <div class="links">
+            <a href="mailto:dxk3597@g.rit.edu"><i class="fas fa-envelope animated fadeInLeft" style="animation-delay: 1.2s;"></i></a>
+            <a href="https://www.github.com/dkaushik95"><i class="fab fa-github animated fadeInLeft" style="animation-delay: 1.3s;"></i></a>
+            <a href="https://www.linkedin.com/in/dishantkaushik/"><i class="fab fa-linkedin-in animated fadeInLeft" style="animation-delay: 1.4s;"></i></a>
+            <a href="https://www.facebook.com/dishant.kaushik"><i class="fab fa-facebook-f animated fadeInLeft" style="animation-delay: 1.5s;"></i></a>
+          </div>
+        </div>
+        <div class="col-md-9 about-right animated fadeIn" style="animation-delay: 1s;">
+          <h1 class="title">Hi I'm Dishant</h1>
+          <p>Thank you for visiting my website, here you will find out all the information you need about me. Feel free to contact me.</p>
+          <div class="links"><a href="tel:+1-585-957-5675"><i class="fas fa-phone"></i></a></div>
         </div>
       </div>
-      <div class="col-md-9 about-right ">
-        <h1 class="title">Hi I'm Dishant</h1>
-        <p>Thank you for visiting my website, here you will find out all the information you need about me. Feel free to contact me.</p>
-        <i class="fas fa-phone"></i>
-      </div>
     </div>
-  </div>
-  <footer></footer>
+    <footer></footer>
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.6/jquery.fullpage.js" integrity="sha256-jwgjxc4j6/dE2aVSFNmEYv4W7+PEL4VChy404By79Is=" crossorigin="anonymous"></script>
-  <script>
-    $(document).ready(function(){
-      $('#fullpage').fullpage({
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.6/jquery.fullpage.js" integrity="sha256-jwgjxc4j6/dE2aVSFNmEYv4W7+PEL4VChy404By79Is=" crossorigin="anonymous"></script>
+    <script>
+      $(document).ready(function(){
+        $('#fullpage').fullpage({
           // menu: '#menu',
           // navigation: true,
           // navigationPosition: 'right',
           sectionsColor: ['#f2f2f2', '#4BBFC3', '#7BAABE', 'whitesmoke', '#000', 'green', 'yellow'],
         });
-    })
-  </script>
-</body>
-</html>
+      })
+    </script>
+  </body>
+  </html>
