--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <title>Dishant Kaushik</title>
     <link rel="stylesheet" href="index.css">
-    <style>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     
-  </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark animated fadeInDown fixed-top">
