Removed unused sections

--- a/index.html
+++ b/index.html
@@ -463,11 +463,11 @@
       </div>
     </div>
     <!-- Awards and Achievements -->
-    <h1 class="animated fadeIn wow section-heading" id="awards">Awards & Achievements</h1>
-    <div class="row"></div>
+    <!-- <h1 class="animated fadeIn wow section-heading" id="awards">Awards & Achievements</h1>
+    <div class="row"></div> -->
     <!-- Extracurricular -->
-    <h1 class="animated fadeIn wow section-heading" id="extra">Extracurricular</h1>
-    <div class="row"></div>
+    <!-- <h1 class="animated fadeIn wow section-heading" id="extra">Extracurricular</h1>
+    <div class="row"></div> -->
 
   </div>
 
