--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
       <div class="col-lg-6 right col-centered">
         <h1 class="title">Hi, I'm Dishant</h1>
-        <p>Thank you for visiting my website, here you will find out all the information you need about me. Feel free to contact me.</p>
+        <p>Thank you for visiting my website. Here you will find out all the information you need about me. Feel free to contact me.</p>
         <div class="links"><a href="tel:+1-585-957-5675"><i class="fas fa-phone"></i></a></div>
       </div>
     </div>
