--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
           </div>
           <div class="card-footer text-muted" style="text-align: center;">
-            Graduating May '19
+            Graduating Dec '19
           </div>
         </div>
       </div>
@@ -397,7 +397,7 @@
     <!-- Skills -->
     <h1 class="animated fadeIn wow section-heading" id="skills">Skills</h1>
     <div class="row">
-      <div class="col-lg-3 animated zoomInDown wow">
+      <div class="col-lg-3 animated fadeInLeft wow">
         <ul class="list-group list-group-flush">
           <li class="list-group-item active"><b>Areas of Intrests</b></li>
           <li class="list-group-item">Full Stack Web Development</li>
@@ -405,7 +405,7 @@
           <li class="list-group-item">Machine Learning</li>
         </ul>
       </div>
-      <div class="col-lg-3 animated zoomInDown wow">
+      <div class="col-lg-3 animated fadeInLeft wow">
         <ul class="list-group list-group-flush">
           <li class="list-group-item active">Programming Languages</li>
           <li class="list-group-item">Ruby</li>
@@ -420,7 +420,7 @@
           Shell Scripting</li>
         </ul>
       </div>
-      <div class="col-lg-3 animated zoomInDown wow">
+      <div class="col-lg-3 animated fadeInLeft wow">
         <ul class="list-group list-group-flush">
           <li class="list-group-item active"><i class="fab fa-internet-explorer"></i>
           Web Development</li>
@@ -440,7 +440,7 @@
           ASP.NET</li>
         </ul>
       </div>
-      <div class="col-lg-3 animated zoomInDown wow">
+      <div class="col-lg-3 animated fadeInLeft wow">
         <ul class="list-group list-group-flush">
           <li class="list-group-item active"><i class="fas fa-database"></i>
           Databases</li>
@@ -449,7 +449,7 @@
           <li class="list-group-item">SQLite</li>
         </ul>
       </div>
-      <div class="col-lg-3 animated zoomInDown wow">     
+      <div class="col-lg-3 animated fadeInLeft wow">     
         <ul class="list-group list-group-flush">
           <li class="list-group-item active">Tools I love</li>
           <li class="list-group-item">Sublime Text</li>
