--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
         <li class="nav-item">
           <a class="nav-link" href="#skills">Skills</a>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Computer Animation Assignments
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/compAnimation/a0/">Assignment #0</a>            
+          </div>
+        </li>
       </ul>
       <span class="navbar-text animated fadeInDown" style="animation-delay: 1s">
         Software Engineering graduate seeking an internship in summer ‘18
